:lipstick: feat: Implementing style for header

--- a/src/css/HeaderStyle.css
+++ b/src/css/HeaderStyle.css
@@ -1,6 +1,5 @@
 header {
-  background-color:rgb(245, 245, 245);
-  height: 70px;
+  background-color: white;
 }
 
 .project-name {
@@ -10,7 +9,7 @@ header {
   text-align: center;
 }
 
-.project-name h1{
+.project-name h1 {
   margin: 10px;
   margin-top: 20px;
 }
@@ -18,7 +17,6 @@ header {
 .container-info-header {
   background-color: rgb(0, 42, 79);
   display: flex;
-  height: 30px;
   justify-content: space-around;
 }
 
@@ -29,7 +27,7 @@ header {
   font-size: 16px;
   font-weight: bold;
   justify-content: flex-start;
-  margin-left: 30px;
+  margin: 5px;
   width: 50%;
 }
 
@@ -40,8 +38,8 @@ header {
   font-size: 16px;
   font-weight: bold;
   justify-content: flex-end;
-  margin-right: 30px;
-  width: 50%;
+  margin: 5px;
+  width: 30%;
 }
 
 .coin {
@@ -50,4 +48,39 @@ header {
 
 .icon {
   margin-left: 20px;
+}
+
+@media screen and (min-width: 200px) and (max-width: 649px) {
+  .container-info-header {
+    flex-wrap: wrap;
+  }
+
+  .email {
+    align-items: center;
+    color: white;
+    display: flex;
+    font-size: 13px;
+    font-weight: bold;
+    justify-content: flex-start;
+    margin: 2px;
+    width: 45%;
+  }
+
+  .resume-expense {
+    color: white;
+    display: flex;
+    font-size: 13px;
+    font-weight: bold;
+    justify-content: flex-start;
+    margin: 2px;
+    width: 42%;
+  }
+
+  .coin {
+    margin-left: 2px;
+  }
+
+  .icon {
+    margin-left: 7px;
+  }
 }
