--- a/src/css/LoginStyle.css
+++ b/src/css/LoginStyle.css
@@ -19,8 +19,9 @@
   height: 400px;
   justify-content: center;
   margin: auto;
-  margin-top: 5%;
+  margin-top: 100px;
   width: 50%;
+  min-width: 300px;
 }
 
 .project-name h1 {
@@ -33,6 +34,7 @@
   flex-direction: column;
   justify-content: center;
   margin: auto;
+  min-width: 250px;
   width: 50%;
 }
 
